--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
     <section class="grid" aria-label="Career Overview">
       <article class="card">
         <h2>Early Years and Entry</h2>
-        <p>Born in 1992 in Melbourne and raised in New Jersey, Irving starred at St. Patrick High School before a one year stint at Duke. Cleveland drafted him with the first overall pick in 2011, and he won Rookie of the Year with elite handle and shot creation.</p>
+        <p>Born in 1992 in Melbourne and raised in New Jersey, Irving starred at St. Patrick High School before a one year stint at Duke. Cleveland drafted him with the first overall pick in 2011, and he won Rookie of the Year with his elite handles and shot creation.</p>
         <ul class="timeline">
           <li><span class="pill">2011</span> Drafted 1st overall by the Cleveland Cavaliers.</li>
           <li><span class="pill">2012</span> NBA Rookie of the Year.</li>
@@ -165,7 +165,7 @@
 
       <article class="card">
         <h2>NBA Career Highlights</h2>
-        <p>Irving’s achievements include the 2016 championship with Cleveland, multiple All-Star selections, and a reputation for late-game shot-making. He later played in Boston and Brooklyn, then moved to Dallas, where he formed a star backcourt.</p>
+        <p>Irving’s achievements include the 2016 championship with Cleveland, multiple All-Star selections, and a reputation for late-game shot-making. He later played in Boston and Brooklyn, then moved to Dallas, where he formed a star backcourt. More of his achievements can be found on nba.com</p>
         <ul class="timeline">
           <li><span class="pill">2011 - 2017</span> Cleveland Cavaliers.</li>
           <li><span class="pill">2017 - 2019</span> Boston Celtics.</li>
@@ -217,3 +217,4 @@
     </div>
   </article>
 </section>
+
