--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
       <article class="card">
         <h2>NBA Career Highlights</h2>
-        <p>Irving’s achievements include the 2016 championship with Cleveland, multiple All-Star selections, and a reputation for late-game shot-making. He later played in Boston and Brooklyn, then moved to Dallas, where he formed a star backcourt. More of his achievements can be found on <a>nba.com</a></p>
+        <p>Irving’s achievements include the 2016 championship with Cleveland, multiple All-Star selections, and a reputation for late-game shot-making. He later played in Boston and Brooklyn, then moved to Dallas, where he formed a star backcourt. More of his achievements can be found on <a href="https://www.nba.com/">nba.com</a></p>
         <ul class="timeline">
           <li><span class="pill">2011 - 2017</span> Cleveland Cavaliers.</li>
           <li><span class="pill">2017 - 2019</span> Boston Celtics.</li>
@@ -217,5 +217,6 @@
     </div>
   </article>
 </section>
+
 
 
